--- a/Calcular/app/src/main/res/values/strings.xml
+++ b/Calcular/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
         <item>Multiplicar</item>
         <item>Somar</item>
         <item>Subtrair</item>
+        <item>Potencia de 10</item>
+        <item>Raiz Quadrada</item>
+        <item>Potenciação</item>
+        <item>Logaritimo</item>
     </string-array>
 </resources>
